--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,14 @@ mainClassName = 'App'
 
 repositories {
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
     
     compile 'commons-codec:commons-codec:1.10'
+    compile	'org.json:json:20090211'
 
     testCompile 'junit:junit:4.12'
 }
